--- a/reconics.cfg
+++ b/reconics.cfg
@@ -1,13 +1,13 @@
 [
     {
-        "name": "Tool1",
-        "repository": "https://github.com/tool1.git",
-        "command": "command_to_run_tool1"
+      "name": "recon_modbus_functions",
+      "repository": "https://github.com/industrialarmy/recon_modbus_functions",
+      "command": "python recon_modbus_functions.py"
     },
     {
-        "name": "Tool2",
-        "repository": "https://github.com/tool2.git",
-        "command": "command_to_run_tool2"
+       "name": "icssploit",
+       "repository": "https://github.com/tijldeneut/icssploit",
+       "command": "python icssploit.py"
     },
     // Add more tools as needed
 ]
