--- a/reconics.cfg
+++ b/reconics.cfg
@@ -2,7 +2,7 @@
     {
       "name": "recon_modbus_functions",
       "repository": "https://github.com/industrialarmy/recon_modbus_functions",
-      "command": "python recon_modbus_functions.py"
+      "command": "python modbus_functions.py"
     },
     {
        "name": "icssploit",
