--- a/reconics.cfg
+++ b/reconics.cfg
@@ -1,6 +1,6 @@
 [
     {
-      "name": "recon_modbus_functions",
+      "name": "modbus_functions",
       "repository": "https://github.com/industrialarmy/recon_modbus_functions",
       "command": "python modbus_functions.py"
     },
