--- a/reconics.cfg
+++ b/reconics.cfg
@@ -1,14 +1,14 @@
 [
     {
-      "name": "modbus_functions",
-      "repository": "https://github.com/industrialarmy/recon_modbus_functions",
+      "name": "modbus",
+      "repository": "https://github.com/industrialarmy/recon_modbus_functions.git",
       "command": "python modbus_functions.py"
     },
-    {
+    { 
        "name": "icssploit",
-       "repository": "https://github.com/tijldeneut/icssploit",
+       "repository": "https://github.com/tijldeneut/icssploit.git",
        "command": "python icssploit.py"
-    },
+    }
 ]
 
 
